[package]
name = "retroboard"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
description = "A sample illustrating the use of Redis as a persistence store for a retrospective board app"
license = "MIT/Apache-2.0"

[dependencies]
redis = "0.8.0"
serde = "1.0.8"
serde_json = "1.0.2"
serde_derive = "1.0.8"
time = "0.1.37"